Finished but not 100%

--- a/templates/current_affairs.html
+++ b/templates/current_affairs.html
@@ -38,7 +38,7 @@ block content %}
                 type="text"
                 name="stock_symbols"
                 class="form-control"
-                placeholder="Enter STOCK SYMBOL AAPL/TSLA"
+                placeholder="Enter AAPL, TSLA, etc."
                 value="{{ symbols[i-1] if symbols and i <= symbols|length else '' }}"
               />
             </div>
